# opencc-rust

./: Cargo.toml  README.md
src/: chars.rs  lib.rs  test.rs
src/convert/: mod.rs
src/dict/: keytree.rs  mod.rs
